--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "@types/mathjs": "0.0.35",
     "angular2-highcharts": "^0.5.5",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "highcharts": "^6.0.2",
     "lodash": "^4.17.4",
+    "mathjs": "^3.16.5",
     "rxjs": "^5.1.0",
+    "sylvester": "0.0.21",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
