--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "highcharts": "^6.0.2",
     "lodash": "^4.17.4",
     "mathjs": "^3.16.5",
+    "moment": "^2.19.2",
     "rxjs": "^5.1.0",
     "sylvester": "0.0.21",
     "zone.js": "^0.8.4"
